# dynasp

./: .gitignore  .gitmodules  CMakeLists.txt  LParseBisonParser.hh  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  location.hh  position.hh  stack.hh
benchmarks/: tseitin.lp  tseitin.py
cmake/: FindHTD.cmake  FindSHARP.cmake
dynasp/: Makefile.am  configure.ac
dynasp/benchmarks/: tseitin.lp  tseitin.py
dynasp/include/dynasp/: Atom.hpp  DynAspAlgorithm.hpp  IDynAspCountingSolution.hpp  IDynAspTuple.hpp  IDynAspTupleFactory.hpp  IGroundAspInstance.hpp  IGroundAspInstanceFactory.hpp  IParserFactory.hpp  Rule.hpp  TreeNodeInfo.hpp  global  main
dynasp/src/: create.cpp  main.cpp
dynasp/src/algorithms/: DynAspAlgorithm.cpp  DynAspCountingSolution.cpp  DynAspCountingSolutionExtractor.cpp  FullDynAspTuple.cpp  FullDynAspTuple.hpp  InverseSimpleDynAspTuple.cpp  InverseSimpleDynAspTuple.hpp  RuleSetDynAspTuple.cpp  RuleSetDynAspTuple.hpp  SimpleDynAspTuple.cpp  SimpleDynAspTuple.hpp
dynasp/src/instances/: GroundAspInstance.cpp  GroundAspInstance.hpp  IncidenceHypergraphConverter.hpp  PrimalHypergraphConverter.hpp
dynasp/src/parsers/: LParseBisonParser.hpp  LParseLexer.ll  LParseParser.hpp
dynasp/src/util/: debug.hpp
dynasp/tests/: Makefile.am
include/dynasp/: Atom.hpp  CertificateDynAspTuple.hpp  ClaspAlgorithm.hpp  CombinedEvaluator.hpp  DependencyGraphEvaluator.hpp  DynAspAlgorithm.hpp  DynAspCertificateAlgorithm.hpp  DynAspProjectionAlgorithm.hpp  DynAspSupportedAlgorithm.hpp  Factory.hpp  IDynAspCountingSolution.hpp  IDynAspCountingSolutionExtractor.hpp  IDynAspTuple.hpp  IFactory.hpp  IGroundAspInstance.hpp  IGroundAspRule.hpp  IGroundAspRuleFactory.hpp  IHypergraphConverter.hpp  IHypergraphConverterFactory.hpp  IParser.hpp  JoinEvaluator.hpp  Parser.hpp  ReferenceCounter.hpp  Rule.hpp  SortedAtomVector.hpp  TreeNodeInfo.hpp  create.hpp  global  main
src/: CMakeLists.txt  Factory.cpp  LParseProblem.cpp  LParseProblem.hpp  Parser.cpp  assembly.cpp  config.h  create.cpp  debug.cpp  main.cpp
src/algorithms/: CertificateDynAspTuple.cpp  ClaspAlgorithm.cpp  ClassicDynAspTuple.cpp  ClassicDynAspTuple.hpp  DynAspAlgorithm.cpp  DynAspCertificateAlgorithm.cpp  DynAspCountingSolution.cpp  DynAspCountingSolution.hpp  DynAspCountingSolutionExtractor.cpp  DynAspCountingSolutionExtractor.hpp  DynAspProjectionAlgorithm.cpp  DynAspSupportedAlgorithm.cpp  FullDynAspTuple.cpp  FullDynAspTuple.hpp  InverseSimpleDynAspTuple.cpp  InverseSimpleDynAspTuple.hpp  RuleSetDynAspTuple.cpp  RuleSetDynAspTuple.hpp  SimpleDynAspTuple.cpp  SimpleDynAspTuple.hpp
src/instances/: AspInstance.cpp  AspInstance.hpp  AspRules.cpp  AspRules.hpp  CombinedEvaluator.cpp  DependencyGraphEvaluator.cpp  DisjunctiveIncidenceHypergraphConverter.cpp  DisjunctiveIncidenceHypergraphConverter.hpp  DisjunctiveIncidencePrimalHypergraphConverter.cpp  DisjunctiveIncidencePrimalHypergraphConverter.hpp  DisjunctivePrimalHypergraphConverter.cpp  DisjunctivePrimalHypergraphConverter.hpp  GroundAspInstance.cpp  GroundAspInstance.hpp  GroundAspRule.cpp  GroundAspRule.hpp  IncidenceHypergraphConverter.cpp  IncidencePrimalHypergraphConverter.cpp  IncidencePrimalHypergraphConverter.hpp  JoinEvaluator.cpp  PrimalHypergraphConverter.cpp  TreeNodeInfo.cpp
src/parsers/: LParseBisonParser.cc  LParseBisonParser.hh  LParseBisonParser.hpp  LParseBisonParser.yy  LParseLexer.cc  LParseLexer.hpp  LParseLexer.ll  LParseParser.cpp  LParseParser.hpp  LParseParser.yy
src/util/: SortedAtomVector.cpp  debug.cpp  debug.hpp  errorhandling.cpp
tests/: Makefile.am  Makefile.in
